Manually merge in Java14 branch, fix checkstyle